--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><h2>Ebus Management</h2></li>
-          <li><a href="/Ebus-Management/components/admin login/admin_log.html">Admin</a></li>
-          <li><a href="/Ebus-Management/components/driver login/dr_log.html">Driver</a></li>
-          <li><a href="/Ebus-Management/index.html">User</a></li>
+          <li><a href="/components/admin login/admin_log.html">Admin</a></li>
+          <li><a href="/components/driver login/dr_log.html">Driver</a></li>
+          <li><a href="/index.html">User</a></li>
         </ul>
     </nav>
         <div class="box">
@@ -79,7 +79,7 @@
                                             if (userData.username === username && userData.password === password) {
                                                 alert('Login successful for user:', userId);
                                                 // You can redirect the user to another page or perform other actions here
-                                                window.location.href = '/Ebus-Management/components/search/search.html';
+                                                window.location.href = '/components/search/search.html';
                                                 return;
                                             }
                                     }
