--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input type="submit" value="submit" class="sub" id="submit">
                 </form>
             </div>
-            <p>Don't have an account?<a href="/components/user registration/reg.html">Register</a></p>
+            <p>Don't have an account?<a href="components/user registration/reg.html">Register</a></p>
         </div>
         <script type="module">             
             // Import the functions you need from the SDKs you need
